welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:10: error: ';' expected but 'else' found.
   } else return true;
     ^